--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
         "arrowParens": "always",
         "singleQuote": true
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "short-unique-id": "^4.4.4"
+    }
 }
