--- a/.swcrc
+++ b/.swcrc
@@ -12,6 +12,13 @@
       "target": "es2016",
       "experimental": {
         "keepImportAssertions": true
+      },
+      "minify": {
+        "compress": {
+          "unused": true
+        },
+        "mangle": true
       }
-    }
+    },
+    "minify": false
 }
