--- a/.swcrc
+++ b/.swcrc
@@ -1,24 +1,19 @@
 {
     "jsc": {
-      "parser": {
-        "syntax": "typescript",
-        "dynamicImport": true,
-        "decorators": true
-      },
-      "transform": {
-        "legacyDecorator": true,
-        "decoratorMetadata": true
-      },
-      "target": "es2016",
-      "experimental": {
-        "keepImportAssertions": true
-      },
-      "minify": {
-        "compress": {
-          "unused": true
+        "parser": {
+            "syntax": "typescript",
+            "dynamicImport": true,
+            "decorators": true
         },
-        "mangle": true
-      }
+        "transform": {
+            "legacyDecorator": true,
+            "decoratorMetadata": true
+        },
+        "target": "es2016",
+        "experimental": {
+            "keepImportAssertions": true
+        }
     },
+    "sourceMaps": "inline",
     "minify": false
 }
