--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ data/
 cache/
 crashdumps/
 package-lock.json/C:/Users/Jerico/Desktop/ALTV/node_modules
+/c:/Users/Jerico/Desktop/ALTV/src/qv-core/client/modules
